--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.nazymko</groupId>
+            <artifactId>mailer-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
